adding second api

--- a/nyt-best-selllers/Base.lproj/Main.storyboard
+++ b/nyt-best-selllers/Base.lproj/Main.storyboard
@@ -63,6 +63,7 @@
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3MT-wo-aSW">
                                 <rect key="frame" x="0.0" y="298" width="414" height="200"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="gOT-ri-6up"/>
                                 </constraints>
@@ -103,6 +104,7 @@
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VOO-fE-0si">
                                 <rect key="frame" x="0.0" y="508" width="414" height="200"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="66L-sk-LrQ"/>
                                 </constraints>
