disabling estimated item size programmatically

--- a/nyt-best-selllers/Base.lproj/Main.storyboard
+++ b/nyt-best-selllers/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                                                     <outlet property="delegate" destination="BYZ-38-t0r" id="KK6-rg-Q9B"/>
                                                 </connections>
                                             </collectionView>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yEL-n7-M7G">
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yEL-n7-M7G">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
