disabling estimated item size in storyboard
Collection View -> Size Inspector -> Estimate Size to none

--- a/nyt-best-selllers/Base.lproj/Main.storyboard
+++ b/nyt-best-selllers/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="gOT-ri-6up"/>
                                                 </constraints>
-                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nYW-bo-DF7">
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nYW-bo-DF7">
                                                     <size key="itemSize" width="128" height="128"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -73,7 +73,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="66L-sk-LrQ"/>
                                                 </constraints>
-                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XB1-NM-vz1">
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XB1-NM-vz1">
                                                     <size key="itemSize" width="128" height="128"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
