--- a/nyt-best-selllers/View/BookDetailStoryboard.storyboard
+++ b/nyt-best-selllers/View/BookDetailStoryboard.storyboard
@@ -42,43 +42,44 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ytg-zE-zm1" userLabel="descriptionLabel">
-                                <rect key="frame" x="20" y="378" width="374" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="EhV-fb-4OH"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fng-19-6Nr">
-                                <rect key="frame" x="20" y="498" width="374" height="30"/>
-                                <state key="normal" title="Buy via.."/>
-                                <connections>
-                                    <action selector="openActionSheet:" destination="Eha-A4-EO8" eventType="touchUpInside" id="jvs-0F-gOo"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7Si-uD-vC6">
+                                <rect key="frame" x="20" y="378" width="374" height="150"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ytg-zE-zm1" userLabel="descriptionLabel">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="EhV-fb-4OH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fng-19-6Nr">
+                                        <rect key="frame" x="0.0" y="120" width="374" height="30"/>
+                                        <state key="normal" title="Buy via.."/>
+                                        <connections>
+                                            <action selector="openActionSheet:" destination="Eha-A4-EO8" eventType="touchUpInside" id="jvs-0F-gOo"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aVI-C6-8oX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="fDJ-Il-tRR" firstAttribute="leading" secondItem="aVI-C6-8oX" secondAttribute="leading" constant="100" id="8W2-zH-ZyC"/>
-                            <constraint firstItem="fng-19-6Nr" firstAttribute="leading" secondItem="aVI-C6-8oX" secondAttribute="leading" constant="20" id="ACg-AX-791"/>
                             <constraint firstItem="aVI-C6-8oX" firstAttribute="trailing" secondItem="fDJ-Il-tRR" secondAttribute="trailing" constant="100" id="Dpe-Ay-epV"/>
                             <constraint firstItem="5bS-3o-PNL" firstAttribute="leading" secondItem="40v-o3-kNs" secondAttribute="leading" id="ILA-lg-cD5"/>
-                            <constraint firstItem="fng-19-6Nr" firstAttribute="top" secondItem="Ytg-zE-zm1" secondAttribute="bottom" constant="20" id="JIz-iF-lch"/>
-                            <constraint firstItem="fng-19-6Nr" firstAttribute="centerX" secondItem="40v-o3-kNs" secondAttribute="centerX" id="OvB-0A-vjt"/>
-                            <constraint firstItem="Ytg-zE-zm1" firstAttribute="leading" secondItem="aVI-C6-8oX" secondAttribute="leading" constant="20" id="SJv-iS-TBf"/>
                             <constraint firstItem="aVI-C6-8oX" firstAttribute="trailing" secondItem="H0A-tK-5HG" secondAttribute="trailing" id="Sil-Dv-aGe"/>
-                            <constraint firstItem="aVI-C6-8oX" firstAttribute="trailing" secondItem="fng-19-6Nr" secondAttribute="trailing" constant="20" id="bIU-eq-bHf"/>
-                            <constraint firstItem="aVI-C6-8oX" firstAttribute="trailing" secondItem="Ytg-zE-zm1" secondAttribute="trailing" constant="20" id="bmZ-gG-C2Q"/>
+                            <constraint firstItem="7Si-uD-vC6" firstAttribute="top" secondItem="H0A-tK-5HG" secondAttribute="bottom" constant="20" id="eXg-Ve-saW"/>
+                            <constraint firstItem="aVI-C6-8oX" firstAttribute="trailing" secondItem="7Si-uD-vC6" secondAttribute="trailing" constant="20" id="hsJ-Rk-P4R"/>
                             <constraint firstItem="H0A-tK-5HG" firstAttribute="top" secondItem="fDJ-Il-tRR" secondAttribute="bottom" constant="25" id="mA7-4s-y9s"/>
                             <constraint firstItem="fDJ-Il-tRR" firstAttribute="top" secondItem="aVI-C6-8oX" secondAttribute="top" constant="20" id="mn1-KL-ywO"/>
                             <constraint firstItem="H0A-tK-5HG" firstAttribute="leading" secondItem="aVI-C6-8oX" secondAttribute="leading" id="quZ-SX-CDh"/>
                             <constraint firstAttribute="trailing" secondItem="5bS-3o-PNL" secondAttribute="trailing" id="t4U-Y0-zwL"/>
-                            <constraint firstItem="Ytg-zE-zm1" firstAttribute="top" secondItem="H0A-tK-5HG" secondAttribute="bottom" constant="20" id="vBU-aX-BFs"/>
                             <constraint firstItem="5bS-3o-PNL" firstAttribute="top" secondItem="40v-o3-kNs" secondAttribute="top" id="yMA-Ni-WMU"/>
                             <constraint firstAttribute="bottom" secondItem="5bS-3o-PNL" secondAttribute="bottom" id="z9e-7i-bzh"/>
+                            <constraint firstItem="7Si-uD-vC6" firstAttribute="leading" secondItem="aVI-C6-8oX" secondAttribute="leading" constant="20" id="zDD-8f-RDn"/>
                         </constraints>
                     </view>
                     <connections>
